--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <ul>
             <s>
                 <center>
-                    <li><a>Menus</a></li>
+                    <li><a>Menu</a></li>
                 </center>
             </s>
         </ul>
